# sfdcjwt

./: .env  .gitignore  Procfile  pyproject.toml  requirements.txt
herokuapp/: main.py
herokuapp/common/: utils.py
herokuapp/data/: token_data.txt
herokuapp/infrastructure/: salesforce.py  settings.py
herokuapp/models/: auth.py
herokuapp/routes/: authentication.py  salesforce.py  salesforces.py  user.py
herokuapp/schema/: sign.py  token.py  user.py
log/: .gitignore
