[tool.poetry]
name = "herokuapp"
version = "0.0.1"
description = ""
authors = ["Axel,Schouten"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "0.109.2"
uvicorn = "0.27.1"
gunicorn = "21.2.0"


[tool.poetry.group.dev.dependencies]
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
