[tool.poetry]
name = "herokuapp"
version = "0.0.1"
description = ""
authors = ["Axel,Schouten"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "0.109.2"
requests = "2.31.0"
uvicorn = "0.27.1"
gunicorn = "21.2.0"
pyjwt = "2.8.0"
cryptography = "42.0.2"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
